# digital-dna

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.pytest_cache/v/cache/: nodeids
agent/: __init__.py  agent.py
docs/: THANKS  architecture.md  roadmap.md
federated/: __init__.py  node.py  pabal
generator/: __init__.py  dna_generator.py  pabal
policy/: __init__.py  access_control.py
tests/: pretttttttttttttt
verification/: pabal
